# python-django-developer-project-52

./: .gitignore  Makefile  README.md  build.sh  db.sqlite3  pyproject.toml  render.yaml
task_manager/: settings.py  urls.py  views.py
task_manager/locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/templates/: base.html  index.html
