[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "django task-manager"
authors = ["e.panin <fath34d@gmail.com>"]
readme = "README.md"
packages = [{include = "task_manager"}]

[tool.poetry.dependencies]
python = "^3.8.8"
django = "4.2"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
